# wvm

./: .actrc  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  install.sh
.cargo/: config.toml
.claude-plugin/: marketplace.json
.claude/skills/wvm/: SKILL.md
.github/workflows/: ci.yml  release.yml
Formula/: wvm.rb
crates/wvm/: Cargo.toml  build.rs
crates/wvm-app/: Cargo.toml
crates/wvm-app/src/: commands.rs  http_wasi.rs  index_component.rs  install.rs  lib.rs  progress.rs
crates/wvm-app/wit/: world.wit
crates/wvm-core/: Cargo.toml
crates/wvm-core/src/: appmanifest.rs  apps.rs  archive.rs  cache.rs  config.rs  discovery.rs  hash.rs  http.rs  index.rs  layout.rs  lib.rs  manifest.rs  materialize.rs  platform.rs  shell.rs  spec.rs  store.rs  usage.rs  util.rs
crates/wvm-core/tests/: discovery.rs  storage.rs
crates/wvm/src/: completions.rs  doctor.rs  main.rs  seed.rs  selfupdate.rs  shim.rs
docs/: design.md
plugins/wvm/.claude-plugin/: plugin.json
plugins/wvm/skills/wvm/: SKILL.md
xtask/src/: main.rs
