[package]
name = "wvm-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WVM application component (wasm32-wasip2)"

[lib]
# A wasi:cli command component owns the `wasi:cli/run` export itself.
crate-type = ["cdylib"]

[dependencies]
wvm-core = { path = "../wvm-core" }
wit-bindgen = "0.48"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
waki = "0.5"
