[package]
name = "wvm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WVM native bootstrapper: establishes the seed runtime and runs the app on it"

[[bin]]
name = "wvm"
path = "src/main.rs"

[dependencies]
wvm-core = { path = "../wvm-core" }
anyhow = "1"
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
